--- a/LineControl/Views/Shared/_Layout.cshtml
+++ b/LineControl/Views/Shared/_Layout.cshtml
@@ -29,19 +29,19 @@
                                 Device
                               </button>
                               <ul class="dropdown-menu">
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                      <a class="dropdown-item" asp-area="" asp-controller="Device" asp-action="Index">Details</a>
                                   </li>
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="Device" asp-action="Create">Add Device</a>
                                   </li>
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="Device" asp-action="History">History</a>
                                   </li>
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="Device" asp-action="Reservation">Reservation</a>
                                   </li>
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="Device" asp-action="Edit">Edit </a>
                                   </li>
                               </ul>
@@ -53,13 +53,13 @@
                                 Calibration Order
                               </button>
                               <ul class="dropdown-menu">
-                                <li class="nav-item">
+                                <li class="nav-item px-xl-3 py-xl-2">
                                   <a class="dropdown-item" asp-area="" asp-controller="CalibrationOrder" asp-action="Index">Details</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item px-xl-3 py-xl-2">
                                   <a class="dropdown-item" asp-area="" asp-controller="CalibrationOrder" asp-action="Create">Add Calibration</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item px-xl-3 py-xl-2">
                                    <a class="dropdown-item" asp-area="" asp-controller="CalibrationOrder" asp-action="Edit">Edir Calibration</a>
                                 </li>
                               </ul>
@@ -71,14 +71,29 @@
                                 User
                               </button>
                               <ul class="dropdown-menu">
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                      <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">Details User</a>
                                   </li>
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Create">Add User</a>
                                   </li>
-                                  <li class="nav-item">
+                                  <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Rights">Authorization</a>
+                                  </li>
+                              </ul>
+                            </li>
+                          </ul>
+                          <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                              <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Activity Type
+                              </button>
+                              <ul class="dropdown-menu">
+                                  <li class="nav-item px-xl-3 py-xl-2">
+                                     <a class="dropdown-item" asp-area="" asp-controller=" ActivityType" asp-action="Index">Details</a>
+                                  </li>
+                                  <li class="nav-item px-xl-3 py-xl-2">
+                                    <a class="dropdown-item" asp-area="" asp-controller=" ActivityType" asp-action="Create">Add Activity</a>
                                   </li>
                               </ul>
                             </li>
