--- a/LineControl/Views/Shared/_Layout.cshtml
+++ b/LineControl/Views/Shared/_Layout.cshtml
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LineControl</title>
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" type="text/css" asp-append-version="true">
+    <link rel="stylesheet" href="~/lib/sb-admin/css/sb-admin-2.min.css" asp-append-version="true">
+     <link rel="stylesheet" href="~/css/feedback.kendo.css" asp-append-version="true" />
+     <link rel="stylesheet" href="~/lib/kendo/css/Kendo.Schaeffler.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LineControl.styles.css" asp-append-version="true" />
@@ -101,6 +105,18 @@
                               </ul>
                             </li>
                           </ul>
+                          <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                              <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Company Location
+                              </button>
+                              <ul class="dropdown-menu">
+                                  <li class="nav-item px-xl-3 py-xl-2">
+                                     <a class="dropdown-item" asp-area="" asp-controller="CompanyLocation" asp-action="Index">Company Location</a>
+                                  </li>
+                              </ul>
+                            </li>
+                          </ul>
                         </div>
                     </ul>
                 </div>
@@ -133,8 +149,12 @@
             &copy; 2024 - LineControl - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+  <script src="~/lib/kendo/js/kendo.all.js" asp-append-version="true"></script>
+  <script src="~/lib/kendo/js/kendo.aspnetmvc.js" asp-append-version="true"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+  <script src="~/lib/sb-admin/js/sb-admin-2.min.js" asp-append-version="true"></script>
+  @Html.Kendo().DeferredScripts(true)
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
