--- a/LineControl/Views/_ViewImports.cshtml
+++ b/LineControl/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using LineControl
 @using LineControl.Models
+@using Kendo.Mvc.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Kendo.Mvc
