--- a/LineControl/Views/CompanyLocation/Index.cshtml
+++ b/LineControl/Views/CompanyLocation/Index.cshtml
@@ -16,6 +16,10 @@
     columns.Bound(s => s.Name).Filterable(ftb => ftb.Cell(cell => cell.Operator("contains").ShowOperators(false).SuggestionOperator(FilterType.Contains)));
     columns.Bound(s => s.Country).Filterable(ftb => ftb.Cell(cell => cell.Operator("contains").ShowOperators(false).SuggestionOperator(FilterType.Contains)));
   })
+  .ToolBar(toolbar =>
+    {
+      toolbar.ClientTemplate("<a class='k-button k-button-md k-rounded k-button-solid k-button-solid-base' href='" + Url.Action("Create", "CompanyLocation") + "'><span class='k-icon k-i-add'></span>Add CompanyLocation</a>");
+    })
    .Pageable()
     .Sortable()
     .Scrollable()
