--- a/LineControl/Views/Shared/_Layout.cshtml
+++ b/LineControl/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                                      <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">Details</a>
                                   </li>
                                   <li class="nav-item px-xl-3 py-xl-2">
-                                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="CreateUser">Add User</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Create">Add User</a>
                                   </li>
                                   <li class="nav-item px-xl-3 py-xl-2">
                                     <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Edit">Edit</a>
