--- a/LineControl/Views/_ViewImports.cshtml
+++ b/LineControl/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LineControl
 @using LineControl.Models
 @using Kendo.Mvc.UI
+@using Microsoft.Extensions.Caching.Memory;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Kendo.Mvc
