--- a/LineControl/Views/ActivityType/Edit.cshtml
+++ b/LineControl/Views/ActivityType/Edit.cshtml
@@ -24,7 +24,7 @@
             <div class="form-row form-group">
               <div class="col s-paddingBtn">
                 <button class="btn btn-primary s-button" type="submit"><i class='k-icon k-i-save'></i><span>Save</span></button>
-                <button class="btn btn-danger s-button s-CancelBtn" data-request-url="@Url.Action("Index", "ActivityType")"><i class='k-icon k-i-cancel'></i><span> Cancel</span></button>
+                <button class="btn btn-danger s-button s-CancelBtn" type="button" data-request-url="@Url.Action("Index", "ActivityType")"><i class='k-icon k-i-cancel'></i><span> Cancel</span></button>
               </div>
             </div>
           <div class="col-12">
