--- a/LineControl/Views/DeviceClassMode/EditDeviceMode.cshtml
+++ b/LineControl/Views/DeviceClassMode/EditDeviceMode.cshtml
@@ -17,7 +17,10 @@
             <div class="form-row form-group">
               <div class="col s-paddingBtn">
                 <button class="btn btn-primary s-button" type="submit"><i class='k-icon k-i-save'></i><span>Save</span></button>
-                <button class="btn btn-danger s-button s-CancelBtn" data-request-url="@Url.Action("Index", "DeviceClassMode")"><i class='k-icon k-i-cancel'></i><span> Cancel</span></button>
+                <button type="button" class="btn btn-danger s-button s-CancelBtn"
+                        onclick="window.location.href='@Url.Action("Index", "DeviceClassMode")'">
+                  <i class='k-icon k-i-cancel'></i><span> Cancel</span>
+                </button>
               </div>
             </div>
            <div class="col-12">
